Added validatePathVariable for actorCommonName